fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow-x:auto;
+    overflow-y: hidden;
   }
   
   #textcheckbox{
